--- a/test-index.html
+++ b/test-index.html
@@ -27,8 +27,8 @@
       <div class="question-answer">
 
       <div>
-        <p class="question-1 click-question-1 question-all">What is Frontend Mentor, and how will it help me? <span><img src="arrow img.png" class="arrow-1 rotate-arrow-1 arrows rotate-all"></span></p>
-        <p class="answer-1 hidden-answer-1 answers hidden-answers">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS , and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
+        <p class="question-1 click-question-1">What is Frontend Mentor, and how will it help me? <span><img src="arrow img.png" class="arrow-1 rotate-arrow-1"></span></p>
+        <p class="answer-1 hidden-answer-1">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS , and JavaScript. It's suitable for all levels and ideal for portfolio building.</p>
       </div>
 
           
